<resources>
    <string name="app_name">Encajados</string>
    <string name="but_ini">Start</string>
    <string name="but_punt">Score</string>
    <string name="but_salir">Exit</string>
    <string name="but_rleft">RLeft</string>
    <string name="but_mleft">MLeft</string>
    <string name="but_ddown">Drop Down</string>
    <string name="but_rright">RRight</string>
    <string name="but_mright">MRight</string>
    <string name="but_pausar">Pause</string>

    <string name="str_menu_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="user_data_header">User Data</string>

    <!-- Messages Preferences -->
    <string name="user_title">User</string>
    <string name="score_title">Score</string>

    <string name="game_over_title">Game Over</string>
    <string name="score_game_over_message">Your Score: </string>
    <string name="retry_message">Retry</string>
    <string name="exit_message">Exit</string>

    <string name="pause_title">Pause</string>
    <string name="continue_message">Continue</string>

    <string name="edit_text_message">User</string>
    <string name="but_user_message">Modify</string>
    <string name="top_scores">Top Scores</string>

</resources>