<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <es.udc.psi.Q23.encajados.TetrisImp.TetrisView
        android:id="@+id/tetrisView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp">

            <Button
                android:id="@+id/buttonRotateLeft"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/but_rleft"
                android:textSize="18sp"
                android:padding="16dp" />

            <Button
                android:id="@+id/buttonMoveLeft"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text= "@string/but_mleft"
                android:textSize="18sp"
                android:padding="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonDropDown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/but_ddown"
            android:textSize="18sp"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp">

            <Button
                android:id="@+id/buttonRotateRight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/but_rright"
                android:textSize="18sp"
                android:padding="16dp" />
            <Button
                android:id="@+id/buttonMoveRight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/but_mright"
                android:textSize="18sp"
                android:padding="16dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_salir"
        android:textSize="18sp"
        android:padding="16dp" />
    <Button
        android:id="@+id/button_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_pausar"
        android:textSize="18sp"
        android:padding="16dp" />

</LinearLayout>